# forest-firefighter

./: .gitignore  README.md  agent.py  benchmark.py  demo.py  demo_visual.py  models.py  pyproject.toml  requirements.txt  setup.py  test_new_features.py
examples/: demo.py  train_example.py  visualize_menu.py
forest_fire_rl/: __init__.py  cli.py  environment.py
forest_fire_rl/agents/: __init__.py  base.py  torch_agents.py
forest_fire_rl/core/: __init__.py  configs.py  environment.py
forest_fire_rl/training/: __init__.py  utils.py
forest_fire_rl/visualization/: __init__.py  advanced_vis.py  interactive_vis.py  simple_vis.py
